# openbb-company-research-tool

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  install.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  research.toml  research.toml.example  setup_environment.zsh
.github/workflows/: ci.yml  provider-smoke.yml
docs/: ai_review_policy.md  batch_evaluation.md  cli_usage.md  company_profile_routing.md  deprecation_policy.md  development_log.md  error_handbook.md  history_v2_v4.md  known_issues_and_roadmap.md  limitations.md  methodology.md  metric_guide.md  output_folder_structure.md  performance_notes.md  report_structure.md  report_style_guide.md  roadmap.md  testing_matrix.md  v2_critical_review.md  v4_3_report_system_design.md  v5_0_engine_design.md  v5_roadmap.md  v6_tauri_studio_boundary.md
docs/investment_rubric/: README.md  a_share_accounting_rules.md  business_model_analysis.md  data_gaps.md  financial_report_reading_framework.en.md  financial_report_reading_framework.yaml  financial_report_reading_framework.zh.md  financial_statement_analysis.md  money_flow_analysis.md  red_flags.md  report_language_style.md  sector_specific_analysis.md  unsupported_claims.md  valuation_method_fit.md
eval_sets/: broad_200.yaml  broad_30_probe.yaml  broad_500_us_cn.yaml  external_regression_pass_01.yaml  regression_hard_cases.yaml  smoke_12.yaml
examples/: example_commands.md
examples/sample_reports/: AAPL_research_score_radar.html  AAPL_sample_research_report.md  AAPL_sample_research_report_ai.md  AAPL_sample_research_report_cn.md  AAPL_vs_SPY_interactive_dashboard.html
openbb_company_research_tool/: __init__.py  __main__.py
providers/: akshare_provider.py  baostock_provider.py  chart_provider.py  openbb_provider.py  pdf_export.py  provider_common.py  tushare_provider.py
reports/: README.md
reports/release_checks/: provider_health.md
reports/samples/: README.md  index.html
research-rs/: Cargo.toml
research-rs/crates/research-ai/: Cargo.toml
research-rs/crates/research-ai/prompts/: chart_explanation_v1.md  company_understanding_v1.md  content_quality_judge_v1.md  financial_interpretation_v1.md  research_blueprint_v1.md  self_review_v1.md  table_explanation_v1.md
research-rs/crates/research-ai/src/: client.rs  company_understanding.rs  financial_interpretation.rs  lib.rs  prompts.rs  research_blueprint.rs  schemas.rs  self_review.rs  tests.rs
research-rs/crates/research-batch/: Cargo.toml
research-rs/crates/research-batch/src/: eval_set.rs  lib.rs  lint.rs  quality.rs  runner.rs  tests.rs  training.rs  training_case.rs
research-rs/crates/research-cli/: Cargo.toml
research-rs/crates/research-cli/src/: main.rs
research-rs/crates/research-core/: Cargo.toml
research-rs/crates/research-core/src/: cache.rs  config.rs  error.rs  io.rs  lib.rs  normalizer.rs  parser.rs  paths.rs  pipeline.rs  provider.rs  run_folder.rs  schema_version.rs  status.rs  tests.rs  types.rs  validation.rs
research-rs/crates/research-report/: Cargo.toml
research-rs/crates/research-report/src/: dashboard.rs  language.rs  lib.rs  markdown.rs  pack.rs  renderer.rs  tests.rs
schemas/: ai_self_review.schema.json  batch_summary.schema.json  company_understanding.schema.json  content_quality_judge.schema.json  financial_interpretation.schema.json  provider_payload.schema.json  report_status.schema.json  research_blueprint.schema.json
scripts/: ai_review.py  asset_aware.py  batch_eval.py  company_research_tool.py  terminal_ui.py  v4_workflow.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
studio/: index.html  tsconfig.json  vite.config.ts
tests/: test_ai_review.py  test_asset_aware.py  test_batch_eval.py  test_formatting.py  test_metrics.py  test_terminal_ui.py  test_v4_workflow.py
training_cases/: README.md
(+336 files in other folders)
