[project]
name = "openbb-company-research-tool"
version = "4.2.0"
description = "A human-readable, thesis-driven, bilingual first-pass equity research workflow generator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cruise Cao" }]
dependencies = [
    "openbb",
    "openbb-yfinance",
    "yfinance",
    "pandas",
    "matplotlib",
    "plotly",
    "openai",
    "pydantic",
    "rich",
    "pytest",
]
