[project]
name = "openbb-company-research-tool"
version = "4.3.0"
description = "A human-readable, thesis-driven, bilingual first-pass equity research workflow generator."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Cruise Cao" }]
dependencies = [
    "openbb",
    "openbb-yfinance",
    "yfinance",
    "pandas",
    "matplotlib",
    "plotly",
    "openai",
    "pydantic",
    "rich",
    "pytest",
]

[project.scripts]
openbb-research = "openbb_company_research_tool.__main__:main"
cresearch = "openbb_company_research_tool.__main__:main"

[tool.setuptools.packages.find]
include = ["openbb_company_research_tool*"]
exclude = ["data*", "reports*", "examples*", "tests*"]
