[workspace]
members = [
  "crates/research-ai",
  "crates/research-batch",
  "crates/research-cli",
  "crates/research-core",
  "crates/research-report",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
version = "5.0.0"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ureq = { version = "2.10", features = ["json"] }
zip = "2.4"
