[package]
name = "v6-tauri-research-studio"
version = "0.1.0"
description = "Read-only desktop shell for v5 research run folders"
authors = ["OpenBB Company Research Tool"]
edition = "2021"

[lib]
name = "v6_tauri_research_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "v6-tauri-research-studio"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
