[package]
name = "research-batch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
csv.workspace = true
serde.workspace = true
serde_json.workspace = true
research-ai = { path = "../research-ai" }
research-core = { path = "../research-core" }
research-report = { path = "../research-report" }
